Added script.js and initial JS test.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
+
+
+
+  <h3>Dangerous Method tests:</h3>
+	<ul>
+		<li>Javascript eval()</li>
+	</ul>
 </body>
 </html>
