Working except for regex.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 
   <h3>Dangerous Method tests:</h3>
 	<ul>
-		<li>Javascript eval()</li>
-  </ul>
-
+    <li>Javascript eval()</li>
+    <li>asdasdasdasd</li>
+    <br>
+    <li>Javascript eval()</li>
+    <li>document.write</li>
+	</ul>
 </body>
 </html>
