Added more dangerous methods.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <br>
     <li>Javascript eval()</li>
     <li>document.write</li>
+    <br>
+    <li>document.writeln</li>
 	</ul>
 </body>
 </html>
