Added jQuery html() method.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <li>asdasdasdasd</li>
     <br>
     <li>Javascript eval()</li>
-    <li>document.write</li>
+    <li>document.write()</li>
     <br>
     <li>document.writeln</li>
+    <li>$( "div.demo-container" ).html()</li>
 	</ul>
 </body>
 </html>
