--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <br>
     <li>document.writeln</li>
     <li>$( "div.demo-container" ).html()</li>
+    <li>$( "div.demo-container" ).append()</li>
 	</ul>
 </body>
 </html>
