Added Angular trustAsHtml, jQuery append not working right.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
   <h3>Dangerous Method tests:</h3>
 	<ul>
     <li>Javascript eval()</li>
-    <li>asdasdasdasd</li>
-    <br>
-    <li>Javascript eval()</li>
     <li>document.write()</li>
-    <br>
     <li>document.writeln</li>
     <li>$( "div.demo-container" ).html()</li>
     <li>$( "div.demo-container" ).append()</li>
+    <li>return $sce.trustAsHtml(val);</li>
 	</ul>
 </body>
 </html>
