Tweaked test page.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <body>
   <script src="script.js"></script>
 
-
-
-  <h3>Dangerous Method tests:</h3>
+  <h3>Dangerous Method test suite:</h3>
 	<ul>
-    <li>Javascript eval()</li>
+    <li>eval('alert(1)')</li>
     <li>document.write()</li>
     <li>document.writeln</li>
     <li>$( "div.demo-container" ).html()</li>
