Added Angular references, new regex, and updated index.html.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <li>document.writeln</li>
     <li>$( "div.demo-container" ).html()</li>
     <li>$( "div.demo-container" ).append()</li>
-    <li>return $sce.trustAsHtml(val);</li>
+    <li>trustAsHtml()</li>
+    <li>ng-bind-html-unsafe</li>
 	</ul>
 </body>
 </html>
