Added setAttribute method.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li>$( "div.demo-container" ).append()</li>
     <li>trustAsHtml()</li>
     <li>ng-bind-html-unsafe</li>
+    <li>.setAttribute()</li>
 	</ul>
 </body>
 </html>
