--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li>trustAsHtml()</li>
     <li>ng-bind-html-unsafe</li>
     <li>.setAttribute()</li>
+    <li>element.insertBefore()</li>
 	</ul>
 </body>
 </html>
