--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <li>ng-bind-html-unsafe</li>
     <li>.setAttribute()</li>
     <li>element.insertBefore()</li>
+    <li>element.insertAfter()</li>
 	</ul>
 </body>
 </html>
