--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li>.setAttribute()</li>
     <li>element.insertBefore()</li>
     <li>element.insertAfter()</li>
+    <li>element.prepend()</li>
 	</ul>
 </body>
 </html>
