--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li>element.insertBefore()</li>
     <li>element.insertAfter()</li>
     <li>element.prepend()</li>
+    <li>element.prependTo()</li>
 	</ul>
 </body>
 </html>
