Added .wrap() and adjusted issue details..

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <li>element.insertAfter()</li>
     <li>element.prepend()</li>
     <li>element.prependTo()</li>
+    <li>element.wrap()</li>
 	</ul>
 </body>
 </html>
