--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li>element.prepend()</li>
     <li>element.prependTo()</li>
     <li>element.wrap()</li>
+    <li>element.wrapAll()</li>
 	</ul>
 </body>
 </html>
