Added .before() and .after().

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <li>element.prependTo()</li>
     <li>element.wrap()</li>
     <li>element.wrapAll()</li>
+    <li>element.before()</li>
+    <li>element.after()</li>
 	</ul>
 </body>
 </html>
