Fixed regexes for jQuery and adjusted test cases in index.html.

--- a/tests/index.html
+++ b/tests/index.html
@@ -24,14 +24,14 @@
     <li>trustAsHtml()</li>
     <li>ng-bind-html-unsafe</li>
     <li>.setAttribute()</li>
-    <li>element.insertBefore()</li>
-    <li>element.insertAfter()</li>
-    <li>element.prepend()</li>
-    <li>element.prependTo()</li>
-    <li>element.wrap()</li>
-    <li>element.wrapAll()</li>
-    <li>element.before()</li>
-    <li>element.after()</li>
+    <li>$( "div.demo-container" ).insertBefore()</li>
+    <li>$( "div.demo-container" ).insertAfter()</li>
+    <li>$( "div.demo-container" ).prepend()</li>
+    <li>$( "div.demo-container" ).prependTo()</li>
+    <li>$( "div.demo-container" ).wrap()</li>
+    <li>$( "div.demo-container" ).wrapAll()</li>
+    <li>$( "div.demo-container" ).before()</li>
+    <li>$( "div.demo-container" ).after()</li>
 	</ul>
 </body>
 </html>
