Better setAttribute regex.

--- a/tests/index.html
+++ b/tests/index.html
@@ -23,7 +23,7 @@
     <li>$( "div.demo-container" ).append()</li>
     <li>trustAsHtml()</li>
     <li>ng-bind-html-unsafe</li>
-    <li>.setAttribute()</li>
+    <li>element.setAttribute()</li>
     <li>$( "div.demo-container" ).insertBefore()</li>
     <li>$( "div.demo-container" ).insertAfter()</li>
     <li>$( "div.demo-container" ).prepend()</li>
