--- a/tests/index.html
+++ b/tests/index.html
@@ -32,6 +32,7 @@
     <li>$( "div.demo-container" ).wrapAll()</li>
     <li>$( "div.demo-container" ).before()</li>
     <li>$( "div.demo-container" ).after()</li>
+    <li>dangerouslySetInnerHTML</li>
 	</ul>
 </body>
 </html>
