--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,8 @@
     <li>eval('alert(1)')</li>
     <li>document.write()</li>
     <li>document.writeln</li>
+    <li>element.innerHTML</li>
+    <li>element.outerHTML</li>
     <li>$( "div.demo-container" ).html()</li>
     <li>$( "div.demo-container" ).append()</li>
     <li>trustAsHtml()</li>
