Added Vue.JS v-html regex and test.

--- a/tests/index.html
+++ b/tests/index.html
@@ -37,6 +37,7 @@
     <li>$( "div.demo-container" ).before()</li>
     <li>$( "div.demo-container" ).after()</li>
     <li>dangerouslySetInnerHTML</li>
+    <li>v-html</li>
 	</ul>
 </body>
 </html>
